Fix vertical align in table cells

--- a/src/app/view/perspectives/table/body/rows/cell-group/data-cell/table-data-cell.component.scss
+++ b/src/app/view/perspectives/table/body/rows/cell-group/data-cell/table-data-cell.component.scss
@@ -5,6 +5,11 @@
   display: block;
   line-height: var(--table-row-min-height);
   min-height: var(--table-row-min-height);
+
+  &:not(.edited) {
+    display: grid;
+    align-items: center;
+  }
 }
 
 %highlighted {
